--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@
     min-width: 320px;
     min-height: 100vh;
     color: black;
+    overflow-x: hidden;
   }
   
   
